<?php
declare(strict_types=1);

namespace App\GangOfFourDesignPatterns\StructuralPatterns\Bridge\Implementors\Contracts;

/**
 * Интерфейс Implementor определяет метод render(), который должен быть реализован
 * конкретными классами для отображения различных типов продуктов.
 * Этот интерфейс является частью паттерна "Мост", позволяя отделить высокоуровневую
 * абстракцию от ее реализации, что упрощает поддержку и расширение кода.
 */
interface Implementor {
    /**
     * Метод render должен быть реализован конкретными классами для отображения одежды.
     * Каждая конкретная реализация предоставит свою версию отображения, в зависимости
     * от типа продукта (например, мужской костюм, женский костюм и т.д.).
     *
     * @return void
     */
    public function render(): void;
}
